[package]
name = "lang-rs"
version = "0.1.0"
authors = ["gidra5 <hranitel.52@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "*"
codespan = "*"
codemap = "*"
itertools = "*"
either = "*"
clap = { version = "~2.33", features = ["yaml"] }
rustyline = "*"
rustyline-derive = "*"
derive_more = "*"
fancy-regex = "*"
utf8 = "*"
lazy_static="*"